# movielens-chatrec-app

backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_id_lkpp.py
backend/app/: database.py  main.py  models.py
backend/app/router/: auth.py  mock_users_db.json
backend/benchmarks/: lkpp_models_benchmark.py  movielens_models_benchmark.py
backend/data/: dummy_lkpp.csv  movie_id_mappings.json  penyedia_id_mappings.json
backend/eval_results/: eval_results_lkpp.csv  eval_results_movielens.csv
backend/letsencrypt/: acme.json
backend/prep_data/: prep_lkpp_data.py  prep_movielens_data.py  prep_movielens_db.py
backend/recsys_models/lkpp_model/: pinsage_model_lkpp.npz  pinsage_model_lkpp_data_info.npz  pinsage_model_lkpp_data_info_name_mapping.json  pinsage_model_lkpp_default_recs.npz  pinsage_model_lkpp_hyper_parameters.json  pinsage_model_lkpp_item_consumed.pkl  pinsage_model_lkpp_user_consumed.pkl
backend/recsys_models/movielens_model/: movielens_deepfm_model_data_info.npz  movielens_deepfm_model_data_info_name_mapping.json  movielens_deepfm_model_default_recs.npz  movielens_deepfm_model_hyper_parameters.json  movielens_deepfm_model_item_consumed.pkl  movielens_deepfm_model_tf_variables.npz  movielens_deepfm_model_user_consumed.pkl
frontend/: .env.production  .firebaserc  package-lock.json  package.json  vite.config.js.timestamp-1706280651587-ab07616da9a25.mjs
frontend/src/: App.jsx
frontend/src/components/: Chat.jsx  Login.jsx  PrivateRoute.jsx
frontend/src/hooks/: AuthProvider.jsx
